# cmpe327-library-management-a2-4512

./: .gitignore  A1_Probst_4512.md  Dockerfile  README.md  library_service.py  pyproject.toml  pytest.ini  requirements.txt  run_e2e_tests.sh
.github/workflows/: ci.yaml
routes/: search_routes.py
services/: library_service.py
templates/: base.html
tests/: add_book_tests.py  borrow_book_tests.py  catalog_display_tests.py  late_fee_tests.py  patron_status_tests.py  return_book_tests.py  test_e2e.py
tests/ai_tests/: test_add_book.py  test_borrow_book.py  test_catalog.py  test_late_fee.py  test_patron_status.py  test_return_book.py  test_search.py
tests/student_tests/: add_book_tests.py  borrow_book_tests.py  catalog_display_tests.py  late_fee_tests.py  patron_status_tests.py  return_book_tests.py  search_books_tests.py  test_payment_mock_stub.py
