[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-management"
version = "0.1.0"
description = "Library Management System"
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["app", "database", "library_service"]

[tool.setuptools.packages.find]
include = ["routes*", "templates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*test*.py", "*tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
